# gotify-rs

./: Cargo.toml  LICENSE  README.md
src/: async_gotify.rs  lib.rs  response_types.rs
tests/: integration_tests.rs
