[package]
name = "gotify-rs"
version = "0.1.0"
edition = "2021"

[features]
default = ["async"]
async = ["tokio"]

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.68"
reqwest = { version = "0.11.18", features = ["json", "stream", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.tokio]
version = "1.28.1"
optional = true
features = ["fs"]

[dev-dependencies]
httpmock = "0.6"
